@@ -28,6 +28,7 @@ CMergeAllDlg::CMergeAllDlg(CWnd* pParent /*=NULL*/)
 	, m_depth(svn_depth_unknown)
 	, m_bIgnoreEOL(FALSE)
 	, m_bIgnoreAncestry(FALSE)
+	, m_bForce(FALSE)
 {
 
 }
@@ -43,6 +44,7 @@ void CMergeAllDlg::DoDataExchange(CDataExchange* pDX)
 	DDX_Check(pDX, IDC_IGNOREANCESTRY, m_bIgnoreAncestry);
 	DDX_Control(pDX, IDC_DEPTH, m_depthCombo);
 	DDX_Check(pDX, IDC_IGNOREEOL, m_bIgnoreEOL);
+	DDX_Check(pDX, IDC_FORCE, m_bForce);
 }
 
 
