@@ -14,6 +14,7 @@
 - NEW: More options in the commit dialog to check
        different items. (Stefan)
 - NEW: Load/Save function in TortoiseUDiff. (Stefan)
+- NEW: Force option for merges. (Stefan)
 
 Version 1.6.3
 - NEW: All binaries are now digitally signed. (Stefan)
